--- a/application/views/product.html
+++ b/application/views/product.html
@@ -139,7 +139,7 @@
 										echo "<div class=\"col-lg-5\">";
 											echo "<b>".$row->Name."</b><br>";
 											echo "Current price: ".$row->Current_Price." Baht<br>";
-											echo "Due date: ".$row->End_Date." ea<br>";
+											echo "Due date: ".$row->End_Date." <br>";
 											echo "<a href= \"product_c/viewProductDetail/".$row->Product_ID."\" >More info..</a>";
 										echo "</div>";
 										echo "<div class=\"col-lg-3 centered auctionbutton\">";
