--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -116,10 +116,10 @@ include 'HTMLHeader.html';
                       <div class="col-md-5">
                         <div class="row" style="padding-top:25px">
                           <div class="col-md-12">
-                            <strong>Current bid: </strong>'.$row->Current_Price.' baht
+                            <strong>Current bid: </strong>'.$row->Current_Price.' Baht
                             
                             <br><strong>Your bidding type: </strong>'.$row->Bid_Type.
-                            '<br><strong>Your Current bid: </strong>'.$row->Bid_Price.
+                            '<br><strong>Your Current bid: </strong>'.$row->Bid_Price.' Baht'.
                             '<br><strong>Your max bid: </strong>'.$maxbid.
                             '<br><strong>Bid Increment: </strong>'.$row->Bid_Increment.'
                           </div>
